--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -1,7 +1,12 @@
 repositories {
     mavenCentral()
     google() // Needed for androidx
+
+    maven { url = 'https://maven.brott.dev/' }
+
+
 }
+
 
 dependencies {
     implementation 'org.firstinspires.ftc:Inspection:9.0.1'
@@ -17,5 +22,10 @@ dependencies {
     implementation 'org.tensorflow:tensorflow-lite-task-vision:0.4.3'
     runtimeOnly 'org.tensorflow:tensorflow-lite:2.12.0'
     implementation 'androidx.appcompat:appcompat:1.2.0'
+
+    implementation 'com.acmerobotics.dashboard:dashboard:0.4.14'
+
+    implementation 'com.acmerobotics.roadrunner:core:1.0.0-beta6'
+    implementation 'com.acmerobotics.roadrunner:actions:1.0.0-beta6'
 }
 
