--- a/build.dependencies.gradle
+++ b/build.dependencies.gradle
@@ -27,5 +27,7 @@ dependencies {
 
     implementation 'com.acmerobotics.roadrunner:core:1.0.0-beta6'
     implementation 'com.acmerobotics.roadrunner:actions:1.0.0-beta6'
+
+    implementation 'org.ftclib.ftclib:core:2.0.1' // core
 }
 
