--- a/MeepMeepTesting/build.gradle
+++ b/MeepMeepTesting/build.gradle
@@ -12,6 +12,8 @@ repositories {
     maven { url = 'https://maven.brott.dev/' }
 }
 
+
+
 dependencies {
-    implementation 'com.github.NoahBres:MeepMeep:2.0.3'
+    implementation 'com.acmerobotics.roadrunner:MeepMeep:0.1.3'
 }
